# nearest_color

./: Cargo.toml  README.md  output.txt
src/: main.rs
