[package]
name = "nearest_color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["derive"]}
csv = "1.2.2"
rayon = "1.7.0"
clap = { version = "4.4.3", features = ["derive"] }
